[package]
name = "arc_util"
version = "0.8.0"
edition = "2021"
authors = ["Zerthox"]
repository = "https://github.com/zerthox/arcdps-utils"

[dependencies]
arcdps = { version = "0.8", git = "https://github.com/zerthox/arcdps-bindings" }
chrono = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dependencies.windows]
version = "0.39"
features = [
    "System",
    "Win32_Foundation",
    "Win32_Media",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
]

[features]
default = []
serde = ["dep:serde", "arcdps/serde"]
settings = ["serde", "serde_json"]
log = ["chrono"]
