[package]
name = "arc_util"
version = "0.9.2"
edition = "2021"
authors = ["Zerthox"]
repository = "https://github.com/zerthox/arcdps-utils"

[dependencies]
arcdps = { git = "https://github.com/zerthox/arcdps-bindings" }
chrono = { version = "0.4.23", optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }
serde_json = { version = "1.0.93", optional = true }

[dependencies.windows]
version = "0.44.0"
features = [
    "System",
    "Win32_Foundation",
    "Win32_Media",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
]

[features]
default = []
serde = ["dep:serde", "arcdps/serde"]
settings = ["serde", "serde_json"]
log = ["chrono"]
