[package]
name = "arc_util"
version = "0.10.4"
edition = "2021"
authors = ["Zerthox"]
repository = "https://github.com/zerthox/arcdps-utils"

[dependencies]
arcdps = { git = "https://github.com/zerthox/arcdps-bindings" }
chrono = { version = "0.4.23", optional = true }
minreq = { version = "2.8.1", features = ["https-native", "json-using-serde"], optional = true }
open = { version = "5.0.0", optional = true }
semver = { version = "1.0.17", optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }
serde_json = { version = "1.0.93", optional = true }

[dependencies.windows]
version = "0.48.0"
features = [
    "System",
    "Win32_Foundation",
    "Win32_Media",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
]

[features]
default = []
serde = ["dep:serde", "arcdps/serde"]
settings = ["serde", "serde_json"]
update = ["minreq", "open", "semver", "dep:serde"]
log = ["chrono"]
